--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,7 +176,7 @@ img {
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
-    bottom: 0;
+    bottom: -100%;
     left: 0;
     width: 100%;
     background-color: var(--body-color);
@@ -223,7 +223,9 @@ img {
 }
 
 /* show menu */
-
+.show-menu {
+  bottom: 0;
+}
 /* Active link */
 
 /* Change background header */
