--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,6 +338,21 @@ img {
   align-items: center;
 }
 
+.button--small {
+  padding: 1.2rem 1.6rem;
+}
+
+.button--link {
+  padding: 0;
+  background-color: transparent;
+  color: var(--first-color);
+}
+
+.button--link:hover {
+  background-color: transparent;
+  color: var(--first-color-alt);
+}
+
 /*==================== ABOUT ====================*/
 .about__img {
   width: 200px;
@@ -572,11 +587,163 @@ img {
   background-color: var(--first-color);
   transform: translate(6px, -7px);
 }
-/*==================== SERVICES ====================*/
 
+/*==================== SERVICES ====================*/
+.services__container {
+  gap: 2.4rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.services__content {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 5.6rem 0.8rem 2rem 2.4rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.3s;
+}
+
+.services__content:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+.services__icon {
+  display: block;
+  font-size: 2.4rem;
+  color: var(--first-color);
+  margin-bottom: var(--mb-1);
+}
+
+.services__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
+  font-weight: var(--font-medium);
+}
+
+.services__button {
+  cursor: pointer;
+}
+
+.services__button:hover .button__icon {
+  transform: translateX(0.4rem);
+}
+
+.services__modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.6rem;
+  z-index: var(--z-modal);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.services__modal-content {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 2.4rem;
+  border-radius: 0.8rem;
+}
+
+.services__modal-services {
+  row-gap: 1.6rem;
+}
+
+.services__modal-service {
+  display: flex;
+}
+
+.services__modal-title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-1-5);
+}
+
+.services__modal-close {
+  position: absolute;
+  top: 1.6rem;
+  right: 1.6rem;
+  font-size: 2.4rem;
+  color: var(--first-color);
+  cursor: pointer;
+}
+
+.services__modal-icon {
+  color: var(--first-color);
+  margin-right: var(--mb-0-25);
+}
 /* Active Modal */
+.services__modal.active {
+  opacity: 1;
+  visibility: visible;
+}
 
 /*==================== PORTFOLIO ====================*/
+.portfolio__container {
+  overflow: initial;
+}
+
+.portfolio__content {
+  padding: 0 2.4rem;
+}
+
+.portfolio__img {
+  width: 265px;
+  border-radius: 0.8rem;
+  justify-self: center;
+}
+
+.portfolio__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+.portfolio__description {
+  margin-bottom: var(--mb-0-75);
+}
+
+.portfolio__button:hover .button__icon {
+  transform: translateX(0.4rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "";
+}
+
+.swiper-portifolio-icon {
+  font-size: 3.2rem;
+  color: var(--first-color);
+}
+
+.swiper-button-prev {
+  left: -0.8rem;
+}
+
+.swiper-button-next {
+  right: -0.8rem;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: -4rem;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-button-bullet {
+  outline: none;
+}
 
 /*==================== PROJECT IN MIND ====================*/
 
