--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
   --header-height: 4.8rem;
 
   /* ============ Color ============*/
-  /* pink 340 */
+  /* pink 340 blue 230 green 142 */
   --hue-color: 250;
 
   /* HSL color mode */
@@ -20,6 +20,8 @@
   --input-color: hsl(var(--hue-color), 70%, 96%);
   --body-color: hsl(var(--hue-color), 60%, 99%);
   --container-color: #fff;
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
   /* ============ Font and typography ============*/
   --body-font: "Poppins", sans-serif;
@@ -65,6 +67,35 @@
   }
 }
 
+/* ============ Button Dark / Light  ============*/
+body.dark-theme {
+  /* HSL color mode */
+  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color), 29%, 16%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+}
+
+/* ============ Button Dark / Light  ============*/
+.nav__btns {
+  display: flex;
+  align-items: center;
+}
+
+.change-theme {
+  font-size: 2rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover {
+  color: var(--first-color);
+}
 /* ============ BASE  ============*/
 * {
   box-sizing: border-box;
@@ -106,6 +137,9 @@ img {
   height: auto;
 }
 
+textarea {
+  resize: none;
+}
 .section {
   padding: 3.2rem 0 6.4rem;
 }
@@ -227,9 +261,16 @@ img {
 .show-menu {
   bottom: 0;
 }
+
 /* Active link */
+.nav__link.active-link {
+  color: var(--first-color);
+}
 
 /* Change background header */
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
 
 /*==================== HOME ====================*/
 .home__container {
@@ -536,6 +577,7 @@ img {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
+  min-width: 125px;
 }
 
 .qualification__button:hover {
@@ -923,15 +965,330 @@ img {
 .footer__social {
   color: #fff;
 }
+
 /*========== SCROLL UP ==========*/
+.scrollup {
+  position: fixed;
+  right: 1.6rem;
+  bottom: -20%;
+  background-color: var(--first-color);
+  opacity: 0.8;
+  padding: 0 0.48rem;
+  border-radius: 0.64rem;
+  z-index: var(--z-tooltip);
+  transform: 0.4s;
+}
+
+.scrollup:hover {
+  background-color: var(--first-color-alt);
+}
+
+.scrollup_icon {
+  font-size: 2.4rem;
+  color: #fff;
+}
 
 /* Show scroll */
+.show-scroll {
+  bottom: 8rem;
+}
 
 /*========== SCROLL BAR ==========*/
+::-webkit-scrollbar {
+  width: 0.96rem;
+  background-color: var(--scroll-bar-color);
+  border-radius: 0.8rem;
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-thumb-color);
+  border-radius: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-color-light);
+}
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
+@media screen and (max-width: 350px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+
+  .nav__menu {
+    padding: 3.2rem 0.4rem 6.4rem;
+  }
+
+  .nav__list {
+    column-gap: 0;
+  }
+
+  .home__content {
+    grid-template-columns: 0.25fr 3fr;
+  }
+
+  .home__blob {
+    width: 180px;
+  }
+
+  .skills__title {
+    font-size: var(--normal-font-size);
+  }
+
+  .qualification__data {
+    gap: 0.8rem;
+  }
+
+  .services__container {
+    grid-template-columns: max-content;
+    justify-content: center;
+  }
+
+  .services__content {
+    padding-right: 5.6rem;
+  }
+
+  .services__modal {
+    padding: 0 0.8rem;
+  }
+
+  .project__img {
+    width: 200px;
+  }
+
+  .testimonial__data,
+  .testimonial__header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .testimonial__img {
+    margin-right: 0;
+    margin-bottom: var(--mb-0-25);
+  }
+
+  .testimonial__data,
+  .testimonial__desciption {
+    text-align: center;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 568px) {
+  .home__content {
+    grid-template-columns: max-content 1fr 1fr;
+  }
+
+  .home__data {
+    grid-column: initial;
+  }
+
+  .home__img {
+    order: 1;
+    -webkit-order: 1;
+    justify-self: center;
+  }
+
+  .about__container,
+  .skills__container,
+  .portfolio__content,
+  .project__container,
+  .contact__container,
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .qualification__sections {
+    display: grid;
+    grid-template-columns: 0.6fr;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  .section {
+    padding: 9.6rem 0 3.2rem;
+  }
+
+  .section__subtitle {
+    margin-bottom: 6.4rem;
+  }
+
+  .header {
+    top: 0;
+    bottom: initial;
+  }
+
+  .header,
+  .main,
+  .footer__container {
+    padding: 0 1.6rem;
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 2.4rem);
+    column-gap: 1.6rem;
+  }
+  .nav__icon,
+  .nav__close,
+  .nav__toggle {
+    display: none;
+  }
+  .nav__list {
+    display: flex;
+    column-gap: 3.2rem;
+  }
+  .nav__menu {
+    margin-left: auto;
+  }
+  .change-theme {
+    margin: 0;
+  }
+  .home__container {
+    row-gap: 8rem;
+  }
+  .home__content {
+    padding-top: 8.8rem;
+    column-gap: 3.2rem;
+  }
+  .home__blob {
+    width: 270px;
+  }
+  .home__scroll {
+    display: block;
+  }
+  .home__scroll-button {
+    margin-left: 4.8rem;
+  }
+
+  .about__container {
+    column-gap: 8rem;
+  }
+  .about__description {
+    text-align: initial;
+  }
+  .about__info {
+    justify-content: space-between;
+  }
+  .about__buttons {
+    justify-content: initial;
+  }
+
+  .qualification__tabs {
+    justify-content: center;
+  }
+  .qualification__button {
+    margin: 0 var(--mb-1);
+  }
+  .qualification__sections {
+    grid-template-columns: 0.5fr;
+  }
+
+  .services__container {
+    grid-template-columns: repeat(3, 218px);
+    justify-content: center;
+  }
+  .services__icon {
+    font-size: 3.2rem;
+  }
+  .services__content {
+    padding: 9.6rem 0 3.2rem 3rem;
+  }
+  .services__modal-content {
+    width: 450px;
+  }
+
+  .portfolio__img {
+    width: 320px;
+  }
+  .portfolio__content {
+    align-items: center;
+  }
+
+  .project {
+    text-align: initial;
+  }
+  .project__bg {
+    background: none;
+  }
+  .project__container {
+    background-color: var(--first-color-second);
+    border-radius: 1.6rem;
+    padding: 4.8rem 4rem 0;
+    grid-template-columns: 1fr max-content;
+    column-gap: 4.8rem;
+  }
+  .project__data {
+    padding-top: 1.28rem;
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .footer__bg {
+    padding: 4.8rem 0 5.6rem;
+  }
+  .footer__links {
+    flex-direction: row;
+    column-gap: 3.2rem;
+  }
+  .footer__socials {
+    justify-self: flex-end;
+  }
+  .footer__copy {
+    margin-top: 7.2rem;
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1024px) {
+  .header,
+  .main,
+  .footer__container {
+    padding: 0;
+  }
+
+  .home__blob {
+    width: 320px;
+  }
+  .home__social {
+    transform: translateX(-9.6rem);
+  }
+
+  .services__container {
+    grid-template-columns: repeat(3, 238px);
+  }
+
+  .portfolio__content {
+    column-gap: 8rem;
+  }
+  .swiper-portifolio-icon {
+    font-size: 5.6rem;
+  }
+  .swiper-button-prev {
+    left: -5.6rem;
+  }
+  .swiper-button-next {
+    right: -5.6rem;
+  }
+  .swiper-horizontal > .swiper-pagination-bullets {
+    bottom: -7.2rem;
+  }
+
+  .contact__form {
+    width: 460px;
+  }
+  .contact__inputs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
